--- a/templates/vision-smarthost.erb
+++ b/templates/vision-smarthost.erb
@@ -1,23 +1,6 @@
-# Warning: This file is managed by puppet; DO NOT EDIT
-#
+# Warning: This file is managed by Puppet
 
 .ifdef DCconfig_smarthost DCconfig_satellite
-
-# configtype=smarthost or configtype=satellite
-#
-# Send all non-local mail to a single other machine (smarthost).
-#
-# This means _ALL_ non-local mail goes to the smarthost. This will most
-# probably not do what you want for domains that are listed in
-# relay_domains. The most typical use for relay_domains is to control
-# relaying for incoming e-mail on secondary MX hosts. In that case,
-# it doesn't make sense to send the mail to the smarthost since the
-# smarthost will probably send the message right back here, causing a
-# loop.
-#
-# If you want to use a smarthost while being secondary MX for some
-# domains, you'll need to copy the dnslookup_relay_to_domains router
-# here so that mail to relay_domains is handled separately.
 
 vision:
   debug_print = "R: smarthost for $local_part@$domain"
