Update config to use domain

--- a/templates/exim4-server.conf.erb
+++ b/templates/exim4-server.conf.erb
@@ -3,7 +3,7 @@
 dc_eximconfig_configtype='smarthost'
 dc_other_hostnames=''
 dc_local_interfaces=''
-dc_readhost='<%= @facts['fqdn'] %>'
+dc_readhost='<%= @facts['domain'] %>'
 dc_relay_domains=''
 dc_minimaldns='false'
 dc_relay_nets='<%= @relay_nets %>'
