Change readhost to domain

--- a/templates/exim4-client.conf.erb
+++ b/templates/exim4-client.conf.erb
@@ -12,4 +12,4 @@ dc_hide_mailname='true'
 dc_mailname_in_oh='true'
 dc_localdelivery='mail_spool'
 dc_other_hostnames=''
-dc_readhost='<%= @facts['fqdn'] %>'
+dc_readhost='<%= @facts['domain'] %>'
