--- a/templates/exim4-client.conf.erb
+++ b/templates/exim4-client.conf.erb
@@ -1,5 +1,4 @@
-# Warning: This file is managed by Puppet
-
+# This file is managed by Puppet
 dc_eximconfig_configtype='satellite'
 dc_local_interfaces='127.0.0.1'
 dc_relay_domains=''
