--- a/templates/exim4-server.conf.erb
+++ b/templates/exim4-server.conf.erb
@@ -1,5 +1,4 @@
-# Warning: This file is managed by Puppet
-
+# This file is managed by Puppet
 dc_eximconfig_configtype='smarthost'
 dc_other_hostnames=''
 dc_local_interfaces=''
